finished routes and pp

--- a/views/form1.html
+++ b/views/form1.html
@@ -5,7 +5,7 @@
     <title>Order Page 1</title>
 </head>
 <body>
-    <form action="./form2" method="post">
+    <form action="./order2" method="post">
         <label for="animal">Animal</label>
         <input type="text" id="animal" name="animal">
 
