changed results.html at tina's request

--- a/views/results.html
+++ b/views/results.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<h1>You've ordered a(n) {{@animal}} </h1>
-<h2>The color is {{@color}}</h2>
+<h1>You've ordered a(n) {{@color}} {{@animal}} </h1>
+
 
 </body>
 </html>
