--- a/views/form5.html
+++ b/views/form5.html
@@ -5,11 +5,28 @@
     <title>Title</title>
 </head>
 <body>
-    <select class = "form-control" name = "pet-color" id = "pet-color">
-        <option>--Select--</option>
-        <repeat group = "{{@colors}}" value = "{{@colorOption}}">
-            <option> {{@colorOption}}</option>
-        </repeat>
-    </select>
+
+    <!--If submission was successful, display a confirmation-->
+    <check if = "{{@success}}">
+        <h2> Thank you for your order of a {{@type}}!</h2>
+    </check>
+
+
+    <label class = "col-sm-1 control-label" for = "pet-color">
+        Pet Color
+    </label>
+    <div class = "col-sm-3">
+
+        <check if = "{{isset(@errors['color')}}">
+            <p>{{@errors['color'}}</p>
+        </check>
+        <select class = "form-control" name = "pet-color" id = "pet-color">
+            <option>--Select--</option>
+            <repeat group = "{{@colors}}" value = "{{@colorOption}}">
+                <option> {{@colorOption}}</option>
+            </repeat>
+        </select>
+    </div>
+
 </body>
 </html>
