--- a/views/form5.html
+++ b/views/form5.html
@@ -10,31 +10,41 @@
 </head>
     <body>
 
-        <h1>Order pet</h1>
+        <h1 class="display-3">Order pet</h1>
 
-        <form action="" method="post">
-            <label class = "col-sm-1 control-label" for = "pet-color">
-                Pet Color
-            </label>
-            <div class = "col-sm-3">
-
-                <select class = "form-control" name = "pet-color" id = "pet-color">
-                    <option>--Select--</option>
-                    <repeat group = "{{@colors}}" value = "{{@colorOption}}">
-                        <option> {{@colorOption}}</option>
-                    </repeat>
-                </select>
-            </div>
+        <form class="form-inline" action="" method="post">
 
             <label class = "col-sm-1 control-label" for = "pet-type">
                 Pet Type
             </label>
-            <input type="text" id="pet-type" name="pet-type">
+            <check if="{{ isset(@errors['type']) }}">
+                <p>{{ @errors['type'] }}</p>
+            </check>
+            <input type="text" id="pet-type" name="pet-type" value="{{ @type }}">
 
             <label class = "col-sm-1 control-label" for = "pet-name">
                 Pet Name
             </label>
-            <input type="text" id="pet-name" name="pet-name">
+            <check if="{{ isset(@errors['name']) }}">
+                <p>{{ @errors['name'] }}</p>
+            </check>
+            <input type="text" id="pet-name" name="pet-name" value="{{ @name }}">
+
+            <label class = "col-sm-1 control-label" for = "pet-color">
+                Pet Color
+            </label>
+            <div class = "col-sm-3">
+                <check if="{{ isset(@errors['color']) }}">
+                    <p>{{ @errors['color'] }}</p>
+                </check>
+                <select class = "form-control" name = "pet-color" id = "pet-color">
+                    <option>--Select--</option>
+                    <repeat group = "{{@colors}}" value = "{{@colorOption}}">
+                        <option <check if="{{ @colorOption == @color }}">selected</check>>
+                            {{@colorOption}}</option>
+                    </repeat>
+                </select>
+            </div>
 
             <button type="submit" name="submit">Submit</button>
         </form>
