--- a/views/form5.html
+++ b/views/form5.html
@@ -17,8 +17,8 @@
     </label>
     <div class = "col-sm-3">
 
-        <check if = "{{isset(@errors['color')}}">
-            <p>{{@errors['color'}}</p>
+        <check if = "{{isset(@errors['color'])}}">
+            <p>{{@errors['color']}}</p>
         </check>
         <select class = "form-control" name = "pet-color" id = "pet-color">
             <option>--Select--</option>
