fixed displaying color

--- a/views/form5.html
+++ b/views/form5.html
@@ -51,7 +51,7 @@
 
         <!--If submission was successful, display a confirmation-->
         <check if = "{{@success}}">
-            <h2> Thank you for your order of {{ @name }} the {{ @colorOption }} {{@type}}!</h2>
+            <h2> Thank you for your order of {{ @name }} the {{ @color }} {{@type}}!</h2>
         </check>
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
